--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,13 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring.boot.version>3.1.14</spring.boot.version>
         <telegrambots.version>6.1.0</telegrambots.version>
         <dotenv.version>5.3.0</dotenv.version>
         <commons.io.version>2.14.0</commons.io.version>
-        <tomcat.embed.core.version>10.1.25</tomcat.embed.core.version>
-        <tomcat.embed.websocket.version>10.1.25</tomcat.embed.websocket.version>
-        <spring.web.version>6.0.25</spring.web.version> <!-- Обновлено до 6.0.25 -->
-        <logback.core.version>1.4.12</logback.core.version> <!-- Обновлено до 1.4.12 -->
-        <logback.classic.version>1.4.12</logback.classic.version> <!-- Обновлено до 1.4.12 -->
-        <snakeyaml.version>2.0</snakeyaml.version> <!-- Обновлено до 2.0 -->
+        <logback.core.version>1.4.12</logback.core.version>
+        <logback.classic.version>1.4.12</logback.classic.version>
         <json.path.version>2.9.0</json.path.version>
         <xmlunit.core.version>2.10.0</xmlunit.core.version>
-        <spring.jdbc.version>6.1.14</spring.jdbc.version>
-        <spring.expression.version>6.1.14</spring.expression.version>
         <junit.jupiter.version>5.9.2</junit.jupiter.version>
         <maven.surefire.plugin.version>3.0.0-M9</maven.surefire.plugin.version>
     </properties>
@@ -34,7 +27,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${spring.boot.version}</version>
+        <version>3.1.14</version> <!-- Используется конкретная версия -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -93,21 +86,21 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>${tomcat.embed.core.version}</version>
+            <version>10.1.25</version> <!-- Обновлено до 10.1.25 -->
         </dependency>
 
         <!-- Tomcat Embed WebSocket -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-websocket</artifactId>
-            <version>${tomcat.embed.websocket.version}</version>
+            <version>10.1.25</version> <!-- Обновлено до 10.1.25 -->
         </dependency>
 
         <!-- Spring Web -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${spring.web.version}</version>
+            <version>6.0.25</version> <!-- Обновлено до 6.0.25 -->
         </dependency>
 
         <!-- Spring Context -->
@@ -135,21 +128,21 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>${logback.core.version}</version>
+            <version>1.4.12</version> <!-- Обновлено до 1.4.12 -->
         </dependency>
 
         <!-- Logback Classic -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.classic.version}</version>
+            <version>1.4.12</version> <!-- Обновлено до 1.4.12 -->
         </dependency>
 
         <!-- JSON -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>[20231013,)</version>
+            <version>20231013</version> <!-- Обновлено до 20231013 -->
         </dependency>
 
         <!-- SLF4J Logging -->
@@ -170,7 +163,7 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>[2.0,)</version>
+            <version>2.0</version> <!-- Обновлено до 2.0 -->
         </dependency>
 
         <!-- XMLUnit Core -->
