--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.14</version> <!-- Используется конкретная версия -->
+        <version>3.1.13</version> <!-- Используется доступная версия -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
