--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.13</version> <!-- Используется доступная версия -->
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.1.12</version> <!-- Используется доступная версия -->
+        <relativePath/> <!-- Поиск родительского POM в репозитории -->
     </parent>
 
     <dependencies>
@@ -38,7 +38,7 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!-- Spring Boot Starter Web (includes spring-webmvc) -->
+        <!-- Spring Boot Starter Web (включает spring-webmvc) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
