--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,11 +35,20 @@ jobs:
     - name: Build with Maven
       run: mvn clean install -U
 
-    - name: Submit Maven Dependencies
+    # Удалите или замените этот шаг, так как действие не существует
+    # - name: Submit Maven Dependencies
+    #   if: success()
+    #   uses: actions/maven-dependency-submission-action@v1
+    #   with:
+    #     groupId: com.rocketscreener
+    #     artifactId: RocketScreener
+    #     version: 0.0.1-SNAPSHOT
+    #     mavenJarPath: target/RocketScreener-0.0.1-SNAPSHOT.jar
+
+    # Если вы хотите загрузить артефакт, используйте actions/upload-artifact@v3
+    - name: Upload JAR Artifact
       if: success()
-      uses: advanced-security/maven-dependency-submission-action@v1
+      uses: actions/upload-artifact@v3
       with:
-        groupId: com.rocketscreener
-        artifactId: RocketScreener
-        version: 0.0.1-SNAPSHOT
-        mavenJarPath: target/RocketScreener-0.0.1-SNAPSHOT.jar
+        name: RocketScreener-jar
+        path: target/RocketScreener-0.0.1-SNAPSHOT.jar
