--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
         <telegrambots.version>6.1.0</telegrambots.version>
         <dotenv.version>5.3.0</dotenv.version>
         <commons.io.version>2.14.0</commons.io.version>
-        <logback.core.version>1.4.12</logback.core.version>
-        <logback.classic.version>1.4.12</logback.classic.version>
+        <logback.version>1.4.12</logback.version>
         <json.path.version>2.9.0</json.path.version>
         <xmlunit.core.version>2.10.0</xmlunit.core.version>
         <junit.jupiter.version>5.9.2</junit.jupiter.version>
@@ -27,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version> <!-- Обновлено до доступной версии -->
+        <version>3.1.14</version> <!-- Убедитесь, что эта версия доступна в Maven Central -->
         <relativePath/> <!-- Поиск родительского POM в репозитории -->
     </parent>
 
@@ -145,25 +144,32 @@
             <version>6.1.14</version>
         </dependency>
 
+        <!-- Guava (Обновлено до 32.0.1-android) -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.0.1-android</version>
+        </dependency>
+
         <!-- Logback Core -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.4.12</version> <!-- Обновлено до 1.4.12 -->
+            <version>${logback.version}</version>
         </dependency>
 
         <!-- Logback Classic -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.12</version> <!-- Обновлено до 1.4.12 -->
+            <version>${logback.version}</version>
         </dependency>
 
         <!-- JSON -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20231013</version> <!-- Обновлено до 20231013 -->
+            <version>20231013</version>
         </dependency>
 
         <!-- SLF4J Logging -->
@@ -184,7 +190,7 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>2.0</version> <!-- Обновлено до 2.0 -->
+            <version>2.0</version>
         </dependency>
 
         <!-- XMLUnit Core -->
