--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.13</version> <!-- Обновлено до последней доступной версии -->
+        <version>3.1.13</version> <!-- Убедитесь, что эта версия доступна в Maven Central -->
         <relativePath/> <!-- Поиск родительского POM в репозитории -->
     </parent>
 
@@ -55,13 +55,6 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- Spring Security Web (Обновлено до 6.1.13) -->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-            <version>6.1.13</version>
-        </dependency>
-
         <!-- Telegram Bots -->
         <dependency>
             <groupId>org.telegram</groupId>
@@ -88,18 +81,11 @@
             <version>${commons.io.version}</version>
         </dependency>
 
-        <!-- Tomcat Embed Core -->
+        <!-- Spring Security Web (Обновлено до 6.1.13) -->
         <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>10.1.25</version> <!-- Обновлено до 10.1.25 -->
-        </dependency>
-
-        <!-- Tomcat Embed WebSocket -->
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-websocket</artifactId>
-            <version>10.1.25</version> <!-- Обновлено до 10.1.25 -->
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>6.1.13</version>
         </dependency>
 
         <!-- Spring Web -->
@@ -149,6 +135,20 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>32.0.1-android</version>
+        </dependency>
+
+        <!-- Tomcat Embed Core -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>10.1.25</version> <!-- Обновлено до 10.1.25 -->
+        </dependency>
+
+        <!-- Tomcat Embed WebSocket -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>10.1.25</version> <!-- Обновлено до 10.1.25 -->
         </dependency>
 
         <!-- Logback Core -->
