--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,17 @@ jobs:
     - name: Build with Maven
       run: mvn clean install -U
 
+    # Удалено действие, которое вызывало ошибку
+    # - name: Submit Maven Dependencies
+    #   if: success()
+    #   uses: actions/maven-dependency-submission-action@v1
+    #   with:
+    #     groupId: com.rocketscreener
+    #     artifactId: RocketScreener
+    #     version: 0.0.1-SNAPSHOT
+    #     mavenJarPath: target/RocketScreener-0.0.1-SNAPSHOT.jar
+
+    # Добавлено действие для загрузки артефактов
     - name: Upload JAR Artifact
       if: success()
       uses: actions/upload-artifact@v3
