--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.14</version> <!-- Используем последнюю доступную версию -->
+        <version>3.1.13</version> <!-- Обновлено до 3.1.13 -->
         <relativePath/> <!-- Поиск родительского POM в репозитории -->
     </parent>
 
