--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.12</version> <!-- Используем стабильную доступную версию -->
+        <version>3.1.13</version> <!-- Используем стабильную доступную версию -->
         <relativePath/> <!-- Поиск родительского POM в репозитории -->
     </parent>
 
@@ -99,14 +99,14 @@
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
-            <version>${dotenv.version}</version>
+            <version>5.3.0</version> <!-- Обновлено до [5.3.0, ) -->
         </dependency>
 
         <!-- Commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons.io.version}</version>
+            <version>2.14.0</version>
         </dependency>
 
         <!-- Guava (Обновлено до 32.0.1-android) -->
@@ -148,7 +148,7 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>${json.path.version}</version>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- YAML Parser -->
@@ -162,7 +162,7 @@
         <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-core</artifactId>
-            <version>${xmlunit.core.version}</version>
+            <version>2.10.0</version>
         </dependency>
 
         <!-- Spring Boot Starter Test -->
@@ -184,7 +184,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
