--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <java.version>17</java.version>
         <telegrambots.version>6.1.0</telegrambots.version>
-        <dotenv.version>5.2.2</dotenv.version> <!-- Используем доступную версию 5.2.2 -->
+        <dotenv.version>5.3.0</dotenv.version> <!-- Используем последнюю доступную версию -->
         <commons.io.version>2.14.0</commons.io.version>
         <logback.version>1.4.12</logback.version>
         <json.path.version>2.9.0</json.path.version>
@@ -37,7 +37,7 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!-- Spring Boot Starter Web (включает spring-webmvc) -->
+        <!-- Spring Boot Starter Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
-            <version>${dotenv.version}</version> <!-- Используем доступную версию 5.2.2 -->
+            <version>${dotenv.version}</version> <!-- Используем последнюю доступную версию -->
         </dependency>
 
         <!-- Commons IO -->
@@ -170,7 +170,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
