--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,18 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- Основная информация о проекте -->
     <groupId>com.rocketscreener</groupId>
     <artifactId>RocketScreener</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>RocketScreener</name>
     <description>RocketScreener Telegram Bot</description>
 
+    <!-- Свойства проекта -->
     <properties>
         <java.version>17</java.version>
         <telegrambots.version>6.1.0</telegrambots.version>
-        <dotenv.version>5.3.0</dotenv.version> <!-- Используем последнюю доступную версию -->
+        <dotenv.version>3.1.0</dotenv.version> <!-- Используем последнюю доступную версию -->
         <commons.io.version>2.14.0</commons.io.version>
         <logback.version>1.4.12</logback.version>
         <json.path.version>2.9.0</json.path.version>
@@ -23,46 +25,40 @@
         <maven.surefire.plugin.version>3.0.0-M9</maven.surefire.plugin.version>
     </properties>
 
+    <!-- Родительский POM -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.12</version> <!-- Используем стабильную доступную версию -->
+        <version>3.1.12</version> <!-- Используем доступную стабильную версию -->
         <relativePath/> <!-- Поиск родительского POM в репозитории -->
     </parent>
 
+    <!-- Зависимости проекта -->
     <dependencies>
-        <!-- Spring Boot Starter -->
+        <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
-        <!-- Spring Boot Starter Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <!-- Spring Boot Starter JDBC -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-
-        <!-- Spring Boot Starter Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- Spring Security Web -->
+        <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
             <version>6.2.7</version> <!-- Обновлено для устранения уязвимостей -->
         </dependency>
-
-        <!-- Spring Security Core -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
@@ -81,56 +77,46 @@
             <version>${telegrambots.version}</version>
         </dependency>
 
-        <!-- dotenv-java -->
+        <!-- Utility Libraries -->
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>${dotenv.version}</version> <!-- Используем последнюю доступную версию -->
         </dependency>
-
-        <!-- Commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons.io.version}</version>
         </dependency>
-
-        <!-- Guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>32.0.1-android</version> <!-- Обновлено для устранения уязвимостей -->
         </dependency>
 
-        <!-- Logback Core -->
+        <!-- Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
         </dependency>
-
-        <!-- Logback Classic -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
-
-        <!-- JSON -->
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20231013</version>
-        </dependency>
-
-        <!-- SLF4J Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.7</version>
         </dependency>
 
-        <!-- com.jayway.jsonpath -->
+        <!-- JSON Processing -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
@@ -144,29 +130,25 @@
             <version>2.0</version>
         </dependency>
 
-        <!-- XMLUnit Core -->
+        <!-- XML Testing -->
         <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-core</artifactId>
             <version>2.10.0</version>
         </dependency>
 
-        <!-- Spring Boot Starter Test -->
+        <!-- Тестовые Зависимости -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.5.0</version>
             <scope>test</scope>
         </dependency>
-
-        <!-- JUnit Jupiter -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -175,6 +157,7 @@
         </dependency>
     </dependencies>
 
+    <!-- Настройка сборки -->
     <build>
         <plugins>
             <!-- Spring Boot Maven Plugin -->
@@ -194,7 +177,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Surefire Plugin for tests -->
+            <!-- Maven Surefire Plugin для тестов -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
