--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,13 @@
     <!-- Свойства проекта -->
     <properties>
         <java.version>17</java.version>
-        <telegrambots.version>6.1.0</telegrambots.version>
-        <dotenv.version>3.1.0</dotenv.version> <!-- Используем последнюю доступную версию -->
-        <commons.io.version>2.14.0</commons.io.version>
-        <logback.version>1.4.12</logback.version>
+        <telegrambots.version>6.9.7.1</telegrambots.version>
+        <dotenv.version>3.1.0</dotenv.version>
+        <commons.io.version>2.18.0</commons.io.version>
+        <logback.version>1.5.14</logback.version>
         <json.path.version>2.9.0</json.path.version>
         <xmlunit.core.version>2.10.0</xmlunit.core.version>
-        <junit.jupiter.version>5.9.2</junit.jupiter.version>
+        <junit.jupiter.version>5.11.4</junit.jupiter.version>
         <maven.surefire.plugin.version>3.0.0-M9</maven.surefire.plugin.version>
     </properties>
 
@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.12</version> <!-- Используем доступную стабильную версию -->
+        <version>3.4.1</version> <!-- Используем указанную версию -->
         <relativePath/> <!-- Поиск родительского POM в репозитории -->
     </parent>
 
@@ -57,12 +57,12 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>6.2.7</version> <!-- Обновлено для устранения уязвимостей -->
+            <version>6.4.2</version> <!-- Указанная версия -->
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>6.2.3</version> <!-- Обновлено для устранения уязвимостей -->
+            <version>6.4.2</version> <!-- Указанная версия -->
         </dependency>
 
         <!-- Telegram Bots -->
@@ -81,60 +81,55 @@
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
-            <version>${dotenv.version}</version> <!-- Используем последнюю доступную версию -->
+            <version>${dotenv.version}</version> <!-- Используем указанную версию -->
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons.io.version}</version>
+            <version>${commons.io.version}</version> <!-- Используем указанную версию -->
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>32.0.1-android</version> <!-- Обновлено для устранения уязвимостей -->
+            <version>32.0.1-android</version> <!-- Указанная версия -->
         </dependency>
 
         <!-- Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>${logback.version}</version>
+            <version>${logback.version}</version> <!-- Используем указанную версию -->
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
+            <version>${logback.version}</version> <!-- Используем указанную версию -->
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.16</version> <!-- Указанная версия -->
         </dependency>
 
         <!-- JSON Processing -->
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20231013</version>
-        </dependency>
-        <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>2.9.0</version>
+            <version>${json.path.version}</version> <!-- Используем указанную версию -->
         </dependency>
 
         <!-- YAML Parser -->
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>2.0</version>
+            <version>2.3</version> <!-- Указанная версия -->
         </dependency>
 
         <!-- XML Testing -->
         <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-core</artifactId>
-            <version>2.10.0</version>
+            <version>${xmlunit.core.version}</version> <!-- Используем указанную версию -->
         </dependency>
 
         <!-- Тестовые Зависимости -->
@@ -146,13 +141,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.5.0</version>
+            <version>5.14.2</version> <!-- Указанная версия -->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.2</version>
+            <version>5.11.4</version> <!-- Указанная версия -->
             <scope>test</scope>
         </dependency>
     </dependencies>
