--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>${json.path.version}</version> <!-- Используем указанную версию -->
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+
         <!-- YAML Parser -->
         <dependency>
             <groupId>org.yaml</groupId>
