--- a/.env
+++ b/.env
@@ -5,12 +5,12 @@ PUBLIC_BOT_TOKEN=7613015195:AAFrWktn8tbqBiz_1BXxxk9XSZOe5Y3T6Kg
 PUBLIC_BOT_USERNAME=Rocket_Screener_bot
 
 # White-list admin users (Telegram user IDs)
-ADMIN_WHITELIST=123456789,987654321  # Example user IDs
+ADMIN_WHITELIST=111111111,222222222  # Test user IDs
 
 # Database
-DB_URL=jdbc:postgresql://localhost:5432/rocketscreener
-DB_USERNAME=postgres
-DB_PASSWORD=yourpassword
+DB_URL=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+DB_USERNAME=testuser
+DB_PASSWORD=testpassword
 DB_SCHEMA=public
 
 # Archiving and retention
@@ -44,10 +44,10 @@ GRAFANA_URL=http://localhost:3000
 PROMETHEUS_URL=http://localhost:9090
 
 # Backup settings
-MONTHLY_BACKUPS_ENABLED=true
+MONTHLY_BACKUPS_ENABLED=false
 
 # Real-time notification settings
-REALTIME_ENABLED=true
+REALTIME_ENABLED=false
 
 # Logging level
-LOGGING_LEVEL=INFO
+LOGGING_LEVEL=DEBUG
