--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PUBLIC_BOT_TOKEN=7613015195:AAFrWktn8tbqBiz_1BXxxk9XSZOe5Y3T6Kg
 PUBLIC_BOT_USERNAME=Rocket_Screener_bot
 
 # White-list admin users (Telegram user IDs)
-ADMIN_WHITELIST=111111111,222222222  # Test user IDs
+ADMIN_WHITELIST=123456,789012  # Test user IDs
 
 # Database
 DB_URL=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
